package(default_visibility = ["//visibility:private"])

load(
    "@rules_dotnet//dotnet:defs.bzl",
    "csharp_binary",
    "csharp_library",
    "csharp_nunit_test",
)

# csharp_library(
#     name = "lib_000_literal_data_types",
#     srcs = ["src/000_literal_data_types.cs"],
#     target_frameworks = ["net6.0"],
#     runtime_identifier = "linux-x64",
#     targeting_packs = [
#         "@example_deps//microsoft.netcore.app.ref",
#     ],
#     deps = [],
# )

csharp_binary(
    name = "p1_m02_literal_data_types_bin",
    srcs = ["src/p1_m02_literal_data_types.cs"],
    target_frameworks = ["net6.0"],
    targeting_packs = [
        "@example_deps//microsoft.netcore.app.ref",
    ],
    deps = [],
)

csharp_binary(
    name = "p1_m03_basic_string_formatting_bin",
    srcs = ["src/p1_m03_basic_string_formatting.cs"],
    target_frameworks = ["net6.0"],
    targeting_packs = [
        "@example_deps//microsoft.netcore.app.ref",
    ],
    deps = [],
)

csharp_binary(
    name = "p1_m04_basic_operations_on_numbers_bin",
    srcs = ["src/p1_m04_basic_operations_on_numbers.cs"],
    target_frameworks = ["net6.0"],
    targeting_packs = [
        "@example_deps//microsoft.netcore.app.ref",
    ],
    deps = [],
)

csharp_binary(
    name = "p1_m05_project_calculate_and_print_student_grades_bin",
    srcs = ["src/p1_m05_project_calculate_and_print_student_grades.cs"],
    target_frameworks = ["net6.0"],
    targeting_packs = [
        "@example_deps//microsoft.netcore.app.ref",
    ],
    deps = [],
)
csharp_binary(
    name = "p1_m06_project_calculate_final_gpa_bin",
    srcs = ["src/p1_m06_project_calculate_final_gpa.cs"],
    target_frameworks = ["net6.0"],
    targeting_packs = [
        "@example_deps//microsoft.netcore.app.ref",
    ],
    deps = [],
)