package(default_visibility = ["//visibility:private"])

load(
    "@rules_dotnet//dotnet:defs.bzl",
    "csharp_binary",
    "csharp_library",
    "csharp_nunit_test",
)

SRC_FOLDER_NAMES = glob(
    ["src"],
    exclude_directories = 0,
)

EXCLUDED_FILES = []

[csharp_binary(
    name = csharp_file.split("/")[-1].split(".")[0],
    srcs = [
        csharp_file,
    ],
    target_frameworks = ["net6.0"],
    deps = [],
) for csharp_file in glob([src_folder + "/**/*.cs" for src_folder in SRC_FOLDER_NAMES]) if csharp_file.split("/")[-1].split(".")[0] not in EXCLUDED_FILES]
