package(default_visibility = ["//visibility:private"])

cc_library(
    name = "node_lib",
    srcs = ["src/node.cpp"],
    hdrs = ["include/company000/node.hpp"],
    includes = ["include/company000"],
    deps = ["@com_github_google_glog//:glog"],
)

cc_library(
    name = "path_lib",
    srcs = ["src/path.cpp"],
    hdrs = ["include/company000/path.hpp"],
    includes = ["include/company000"],
    deps = [
        ":node_lib",
        "@com_github_google_glog//:glog"
    ],
)

cc_library(
    name = "triangle_directed_graph_lib",
    srcs = ["src/triangle_directed_graph.cpp"],
    hdrs = ["include/company000/triangle_directed_graph.hpp"],
    includes = ["include/company000"],
    deps = [
        ":node_lib",
        ":path_lib",
        "@com_github_google_glog//:glog"
    ],
)

cc_test(
    name = "node_test",
    size = "small",
    srcs = ["test/node_test.cpp"],
    deps = [
        "@com_google_googletest//:gtest_main",
        ":node_lib"
    ],
)

cc_test(
    name = "path_test",
    size = "small",
    srcs = ["test/path_test.cpp"],
    deps = [
        "@com_google_googletest//:gtest_main",
        ":path_lib"
    ],
)

cc_test(
    name = "triangle_directed_graph_test",
    size = "small",
    srcs = ["test/triangle_directed_graph_test.cpp"],
    deps = [
        "@com_google_googletest//:gtest_main",
        ":triangle_directed_graph_lib"
    ],
    data = ["data/simple_graph.txt"],
)

cc_binary(
    name = "exercise_1",
    srcs = ["main/exercise_1.cpp"],
    deps = [
        ":node_lib",
        ":triangle_directed_graph_lib"
    ],
    data = ["data/exercise_1_graph.txt"],
)
