package(default_visibility = ["//visibility:private"])

cc_test(
  name = "test_std_find",
  size = "small",
  srcs = ["std_find.cpp"],
  deps = ["@com_google_googletest//:gtest_main"],
)
cc_test(
  name = "test_pointers",
  size = "small",
  srcs = ["pointers.cpp"],
  deps = ["@com_google_googletest//:gtest_main"],
)