package(default_visibility = ["//visibility:private"])

cc_test(
  name = "std_find_test",
  size = "small",
  srcs = ["test/std_find_test.cpp"],
  deps = ["@com_google_googletest//:gtest_main"],
)
cc_test(
  name = "pointers_test",
  size = "small",
  srcs = ["test/pointers_test.cpp"],
  deps = ["@com_google_googletest//:gtest_main"],
)
