load("@rules_python//python/pip_install:requirements.bzl", "compile_pip_requirements")
load("@pip_other_python_scripts_deps//:requirements.bzl", "requirement")

package(default_visibility = ["//visibility:private"])

py_binary(
    name = "web_scrapper_miro_templates",
    srcs = ["src/web_scrapper_miro_templates.py"],
    deps = [
        requirement("requests"),
        requirement("bs4"),
        requirement("pillow"),
    ]
)

compile_pip_requirements(
    name = "requirements",
    timeout = "moderate",
    requirements_in = "requirements.in",
    visibility = ["//visibility:public"],
)
